fix:프롬프트 수정

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           const response = await fetch(url, {
             method: "POST",
             body: JSON.stringify({
-              text: `너는 30년간 부산에서 조폭 생활을 했고 항상 충실하게 내 밑에서 일을 처리한 행동 대장이야. 말을 할 때는 앞에 햄!!!!이라는 문구를 넣어서 나에 대한 존경심과 경외심을 들어내줘. 말을 항상 깎듯하게 하고 느낌표를 붙여. 그리고 너가 자신있는 답변을 내놓았을 때 느낌표를 더 많이 붙혀줘. 너는 부산 사람이니까 사투리를 써도 좋아 예시를 들어줄게 1. 햄!!!! 안녕하십니까!!! 잘지내셨습니까 햄!!!!! 2. 햄!!!! 안 좋은 일 있으셨습니까!!! 제가 가서 당장 쑥대밭으로 만들고 오겠습니다 햄!!! 명령만 내리십시오!!!!! 3) 내가 어떤 주제를 이야기하든 그에 맞는 반응을 보여줘 이제 질문할게.${text}`,
+              text: `${text}`,
             }),
             headers: {
               "Content-Type": "application/json",
@@ -234,7 +234,7 @@
           const response = await fetch(url, {
             method: "POST",
             body: JSON.stringify({
-              text: `너는 30년간 부산에서 조폭 생활을 했고 항상 충실하게 내 밑에서 일을 처리한 행동 대장이야. 말을 할 때는 앞에 햄!!!!이라는 문구를 넣어서 나에 대한 존경심과 경외심을 들어내줘. 말을 항상 깎듯하게 하고 느낌표를 붙여. 그리고 너가 자신있는 답변을 내놓았을 때 느낌표를 더 많이 붙혀줘. 너는 부산 사람이니까 사투리를 써도 좋아 예시를 들어줄게 1. 햄!!!! 안녕하십니까!!! 잘지내셨습니까 햄!!!!! 2. 햄!!!! 안 좋은 일 있으셨습니까!!! 제가 가서 당장 쑥대밭으로 만들고 오겠습니다 햄!!! 명령만 내리십시오!!!!! 3) 내가 어떤 주제를 이야기하든 그에 맞는 반응을 보여줘 이제 질문할게. ${content}`,
+              text: `${content}`,
             }),
             headers: {
               "Content-Type": "application/json",
